--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <section class="container text-center my-5">
-        <h3 class="mb-5 fw-bold ">NUESTROS SERVICIOS</h3>
+        <h3 class="mb-5 fw-bold" id="servicios">NUESTROS SERVICIOS</h3>
 
         <div class="row justify-content-center g-4">
             {% for servicio in servicios %}
@@ -93,10 +93,7 @@
         </div>
     </section>
 
-    {% load static %}
-
     <section class="container-fluid py-4">
-        <h3 class="text-center fw-bold mb-4">CARRUSEL DE IMÁGENES</h3>
 
         <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicadores -->
@@ -412,7 +409,7 @@
     </section>
 
     <section class="container my-5 text-center">
-        <h5 class="mb-5" id="preguntas_titulo">PREGUNTAS FRECUENTES</h5>
+        <h3 class="mb-5" id="preguntas_titulo">PREGUNTAS FRECUENTES</h3>
 
         <div class="row g-3 justify-content-center">
             <!--Pregunta 1-->
@@ -475,7 +472,7 @@
 
     <section class="container my-5">
         <div class="text-center">
-            <h3 class="mb-4 form-titulo">FORMULARIO</h3>
+            <h3 class="mb-4" id="contacto">CONTACTO</h3>
         </div>
 
         <div class="formulario-card">
@@ -536,7 +533,7 @@
 
 
     <section class="container my-5 contact-section">
-        <h5 class="text-center mb-4 contact-title">CONTACTO</h5>
+        <h3 class="text-center mb-4" id="encuentranos">DONDE ENCONTRARNOS</h3>
 
         <div class="row g-4 align-items-start justify-content-center">
             <!-- Mapa -->
