--- a/veterinaria/app/templates/login.html
+++ b/veterinaria/app/templates/login.html
@@ -16,8 +16,7 @@
 
             <!-- Columna izquierda (imagen/sistema) -->
             <div class="col-logo d-flex flex-column justify-content-center">
-                <img class="system-image" src="{% static 'img/logo.png' %}" alt="Sistema">
-                <p class="text-center px-4 text-muted small mb-4">PetCare</p>
+                <img class="system-image" src="{% static 'img/PetCare.png' %}" alt="Sistema">
             </div>
 
             <!-- Columna del formulario -->
